The second iteration resolves most of the issues related to alignments and placements.

--- a/style.css
+++ b/style.css
@@ -1,31 +1,26 @@
 /* Landing page CSS file */
 body {
-    
-}
-.header, .top, .footer {
-    background-color: #1F2937;
-    color: #E5E7EB;
-    padding: 16px;
+    margin: 0;
 }
 
 .header {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    align-items: flex-start;
 }
 
 .logo-name {
-    display: flex;
-    flex-flow: row nowrap;
     gap: 16px;
-    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
 }
 
 .site-name {
     font-size: 36px;
     font-weight: 900;
     color: #f9faf8;
+    margin-top: 0;
+    margin-left: 0;
 }
 
 .menu {
@@ -34,6 +29,12 @@ body {
     gap: 16px;
     font-size: 18px;
     color: #E5E7EB;
+}
+
+.header, .top, .footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    padding: 16px;
 }
 
 a {
@@ -51,17 +52,21 @@ li {
     flex-flow: row wrap;
     gap: 48px;
     justify-content: center;
+    padding: 96px;
 }
 
 .hero-title {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    margin: 0;
 }
 
 .hero-text {
     font-size: 18px;
     color: #E5E7EB;
+    margin-top: 0;
+    margin-bottom: 24px;
 }
 
 #signup-button {
@@ -77,6 +82,7 @@ li {
     display: flex;
     flex-flow: column;
     align-items: center;
+    padding: 96px;
 }
 
 .itinerary-suggestions {
@@ -102,6 +108,7 @@ li {
     background-color: #E5E7EB;
     align-items: center;
     flex-direction: column;
+    padding: 96px;
 }
 
 .quotes-text, .quotes-author {
@@ -109,6 +116,7 @@ li {
     font-weight: light;
     font-style: italic;
     color: #1F2937;
+    margin: 0;
 }
 
 .quotes-author {
@@ -118,7 +126,7 @@ li {
 .section3 {
     display: flex;
     justify-content: center;
-    padding: 48px;
+    padding: 96px;
 }
 
 .action-box {
@@ -127,28 +135,33 @@ li {
     background-color: #3882F6;
     color: white;
     padding: 16px 48px;
-    gap: 24px;
+    gap: 72px;
     border-radius: 8px;
     align-items: center;
+    padding: 24px 48px;
+    justify-content: space-between;
 }
 
 #subscribe-button {
-    border: none;
-    border-color: #f9faf8;
-    color: #3882F6;
+    border: 1px solid #f9faf8;
+    background-color: #3882F6;
+    color: #f9faf8;
     font-weight: bold;
     border-radius: 8px;
     height: fit-content;
     padding: 8px;
+    font-size: 18px;
 }
 
 .actioncall-headline {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 24px;
+    margin: 0;
 }
 
 .actioncall-text {
     font-size: 18px;
+    margin: 0;
 }
 
 .footer {
@@ -164,14 +177,8 @@ li {
     flex-shrink: 0;
 }
 
-.logo-div {
-    width: 36px;
-    height: 36px;
-    flex-shrink: 0;
-}
-
 .top-image {
-    width: 300px;
+    width: 250px;
     height: auto;
 }
 
